@@ -1,3 +1,8 @@
+2008-04-14  Bradley M. Kuhn  <bkuhn@ebb.org>
+
+	* pokernetwork/pokercashier.py (PokerCashier.cashInValidateNote):
+	Added '#pragma: no cover' for lines that hits bug in coverage.py.
+
 2008-04-13  Bradley M. Kuhn  <bkuhn@ebb.org>
 
 	* tests/test-pokercashier.py.in
